# azure-ai300-ml-azd

./: .gitignore  README.md  azure.yaml  notes.txt  pyproject.toml
infra/: main.bicep  main.parameters.json
infra/modules/: compute-instance.bicep  workspace.bicep
models/credit_defaults_model/: MLmodel  conda.yaml  model.pkl  python_env.yaml  requirements.txt
src/: auth.py  conda.yml  del_dataset.py  register_credit_dataset.py  register_data.py  register_model_asset.py  trainenv.yaml
src/data/adult_test/: MLTable  adult_test.csv
src/data/adult_train/: MLTable  adult_train.csv
src/data/test/: MLTable  credit_defaults_test.csv
src/data/train/: MLTable  credit_defaults_train.csv
src/rai/: cohorts.json  pdf_gen.json  rai_pipeline.py
src/test/: MLTable_test.py
src/train/: create_job2.py  main_train.py  train.py  train_job.py
